@startuml SimpleFactory_Pattern

title 简单工厂模式

!theme plain

abstract class baseprop {
    # locationX: int
    # locationY: int
    # speedX: int
    # speedY: int
    ---
    + baseprop(int, int, int, int)
    + forward(): void
    + {abstract} effect(): void
}

class BloodProp {
    + BloodProp(int, int, int, int)
    + effect(): void
}

class FireProp {
    + FireProp(int, int, int, int)
    + effect(): void
}

class FireSuperProp {
    + FireSuperProp(int, int, int, int)
    + effect(): void
}

class BombProp {
    + BombProp(int, int, int, int)
    + effect(): void
}

class FreezeProp {
    + FreezeProp(int, int, int, int)
    + effect(): void
}

class PropFactory {
    + {static} createProp(int, int, int, int, String): baseprop
}

baseprop <|-- BloodProp
baseprop <|-- FireProp
baseprop <|-- FireSuperProp
baseprop <|-- BombProp
baseprop <|-- FreezeProp

PropFactory ..> baseprop : create
PropFactory ..> BloodProp : instantiate
PropFactory ..> FireProp : instantiate
PropFactory ..> FireSuperProp : instantiate
PropFactory ..> BombProp : instantiate
PropFactory ..> FreezeProp : instantiate


@enduml
